finished functionality of the ui

--- a/src/css/authentication.css
+++ b/src/css/authentication.css
@@ -3,3 +3,22 @@
   color: #007bff;
   text-decoration: underline;
 }
+
+.authentication-con {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  height: 100vh;
+}
+
+.auth-btn {
+  margin-top: 20px !important;
+}
+
+.auth-title {
+  font-size: 1.5em;
+  color: '#7777';
+  padding: 10px;
+}
