--- a/src/assets/css/heroScreen.css
+++ b/src/assets/css/heroScreen.css
@@ -16,7 +16,7 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 25px;
-  margin: 25px 5px;
+  margin: 25px;
   width: 300px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
@@ -101,6 +101,17 @@
   transform: translateY(-50%);
 }
 
+.logout-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: #00b0ff !important;
+  padding: 10px 20px !important;
+  font-size: 16px !important;
+  display: flex;
+  align-items: center;
+}
+
 .hero-card-con {
   display: flex;
   flex-direction: row;
@@ -118,7 +129,7 @@
 
 @media (max-width: 1250px) {
   .hero-card {
-    width: 40%;
+    width: 70%;
   }
 }
 
