--- a/src/assets/css/heroScreen.css
+++ b/src/assets/css/heroScreen.css
@@ -106,6 +106,7 @@
   top: 20px;
   right: 20px;
   background-color: #00b0ff !important;
+  color: #fff !important;
   padding: 10px 20px !important;
   font-size: 16px !important;
   display: flex;
